--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Piyush Anand",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0"
   }
